[tool.poetry]
name = "shawns-nice-pyarsenal"
version = "0.1.0"
description = "A curated arsenal of Python ðŸ utilities, snippets, and whatnot."
authors = ["shawn âœŠ"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
boto3 = "^1.34.0"
rich = "^13.7.0"
PyGithub = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.7.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
bandit = "^1.7.5"
radon = "^6.0.1"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
namespace_packages = true
ignore_missing_imports = true
exclude = ["setup.py"]
files = "*.py"
package_root = "."
explicit_package_bases = true

[tool.bandit]
exclude_dirs = [".venv", "tests", ".git"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E501"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv", ".env", "env"]
per-file-ignores = """
    __init__.py:F401,F403
    examples/*.py:E402
"""
max-complexity = 10
